@@ -64,6 +64,12 @@ public class OracleSymmetricDialect extends AbstractSymmetricDialect implements 
             }
         }
     }
+    
+    @Override
+    protected void buildSqlReplacementTokens() {
+        super.buildSqlReplacementTokens();
+        sqlReplacementTokens.put("selectDataUsingGapsSqlHint", "/*+ index(d,SYM_IDX_D_CHANNEL_ID) */");
+    }    
 
     @Override
     public void createTrigger(StringBuilder sqlBuffer, DataEventType dml, Trigger trigger,
